--- a/convert.ipynb
+++ b/convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -15,11 +15,12 @@
       "Copied and converted: Investment.md to TXT/Investment.txt\n",
       "Copied and converted: Legal Framework.md to TXT/Legal Framework.txt\n",
       "Copied and converted: Marketing and Sales.md to TXT/Marketing and Sales.txt\n",
-      "Copied and converted: STASH Reference Manual.md to TXT/STASH Reference Manual.txt\n",
       "Copied and converted: Strategy.md to TXT/Strategy.txt\n",
       "Copied and converted: VAO Reference Manual.md to TXT/VAO Reference Manual.txt\n",
       "Copied and converted: VAO User Manual.md to TXT/VAO User Manual.txt\n",
-      "Copied and converted: README.md to TXT/README.txt\n"
+      "Copied and converted: README.md to TXT/README.txt\n",
+      "Copied and converted: STASH Reference Manual.md to TXT/STASH Reference Manual.txt\n",
+      "Copied and converted: modified_README.md.bak to TXT/STASH Reference Manual.txt\n"
      ]
     }
    ],
