--- a/convert.ipynb
+++ b/convert.ipynb
@@ -9,18 +9,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copied and converted: AHK Token.md to TXT/AHK Token.txt\n",
-      "Copied and converted: CADET Reference Manual.md to TXT/CADET Reference Manual.txt\n",
-      "Copied and converted: Example.md to TXT/Example.txt\n",
-      "Copied and converted: Investment.md to TXT/Investment.txt\n",
-      "Copied and converted: Legal Framework.md to TXT/Legal Framework.txt\n",
-      "Copied and converted: Marketing and Sales.md to TXT/Marketing and Sales.txt\n",
-      "Copied and converted: Strategy.md to TXT/Strategy.txt\n",
-      "Copied and converted: VAO Reference Manual.md to TXT/VAO Reference Manual.txt\n",
-      "Copied and converted: VAO User Manual.md to TXT/VAO User Manual.txt\n",
-      "Copied and converted: README.md to TXT/README.txt\n",
-      "Copied and converted: STASH Reference Manual.md to TXT/STASH Reference Manual.txt\n",
-      "Copied and converted: modified_README.md.bak to TXT/STASH Reference Manual.txt\n"
+      "Copied and converted: AHK Token.md to TXT\\AHK Token.txt\n",
+      "Copied and converted: CADET Reference Manual.md to TXT\\CADET Reference Manual.txt\n",
+      "Copied and converted: Example.md to TXT\\Example.txt\n",
+      "Copied and converted: Investment.md to TXT\\Investment.txt\n",
+      "Copied and converted: Legal Framework.md to TXT\\Legal Framework.txt\n",
+      "Copied and converted: Marketing and Sales.md to TXT\\Marketing and Sales.txt\n",
+      "Copied and converted: modified_README.md.bak to TXT\\Marketing and Sales.txt\n",
+      "Copied and converted: README.md to TXT\\README.txt\n",
+      "Copied and converted: STASH Reference Manual.md to TXT\\STASH Reference Manual.txt\n",
+      "Copied and converted: Strategy.md to TXT\\Strategy.txt\n",
+      "Copied and converted: VAO Reference Manual.md to TXT\\VAO Reference Manual.txt\n",
+      "Copied and converted: VAO User Manual.md to TXT\\VAO User Manual.txt\n"
      ]
     }
    ],
@@ -71,10 +71,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Here is a block equation:\n",
+      "$$x = {-b \\pm \\sqrt{b^2-4ac} \\over 2a}$$\n",
+      "\n",
+      "And here is an inline equation: $a^2 + b^2 = c^2$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def convert_equation_brackets(content):\n",
+    "    # Convert block equations from \\[ \\] to $$, removing spaces adjacent to the brackets\n",
+    "    content = re.sub(r'\\\\\\[\\s*(.*?)\\s*\\\\\\]', r'$$\\1$$', content, flags=re.DOTALL)\n",
+    "    \n",
+    "    # Convert inline equations from \\( \\) to $, removing spaces adjacent to the brackets\n",
+    "    content = re.sub(r'\\\\\\(\\s*(.*?)\\s*\\\\\\)', r'$\\1$', content, flags=re.DOTALL)\n",
+    "    \n",
+    "    return content\n",
+    "\n",
+    "# Example usage:\n",
+    "markdown_content = \"\"\"\n",
+    "Here is a block equation:\n",
+    "\\[ x = {-b \\\\pm \\\\sqrt{b^2-4ac} \\\\over 2a} \\]\n",
+    "\n",
+    "And here is an inline equation: \\( a^2 + b^2 = c^2 \\)\n",
+    "\"\"\"\n",
+    "\n",
+    "converted_content = convert_equation_brackets(markdown_content)\n",
+    "print(converted_content)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Here is a block equation:\n",
+      "\\[ x = {-b \\pm \\sqrt{b^2-4ac} \\over 2a} \\]\n",
+      "\n",
+      "Remember theat I have $5.00 and you gave me $10.00. I also have a variable called \\( VF.\n",
+      "\n",
+      "And here is an inline equation: \\)a^2 + b^2 = c^2$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def convert_equation_brackets_back(content):\n",
+    "    # Convert block equations from $$ to \\[ \\], ensuring no spaces around the content\n",
+    "    content = re.sub(r'\\$\\$(.*?)(?<! )\\$\\$', r'\\\\[ \\1 \\\\]', content, flags=re.DOTALL)\n",
+    "    \n",
+    "    # Convert inline equations from $ to \\( \\)\n",
+    "\n",
+    "   # This pattern aims to match dollar signs that likely denote math by checking for the presence of letters\n",
+    "    # It assumes math expressions will have at least one alphabetic character\n",
+    "    pattern = r'\\$(?=[^\\d]*[a-zA-Z])[^\\$]+?\\$'\n",
+    "\n",
+    "    # Replace the matched patterns\n",
+    "    content = re.sub(pattern, lambda m: r'\\( ' + m.group(0)[1:-1].strip() + r' \\)', content)\n",
+    "    return content\n",
+    "\n",
+    "# Example usage:\n",
+    "markdown_content = \"\"\"\n",
+    "Here is a block equation:\n",
+    "$$x = {-b \\\\pm \\\\sqrt{b^2-4ac} \\\\over 2a}$$\n",
+    "\n",
+    "Remember theat I have $5.00 and you gave me $10.00. I also have a variable called $VF.\n",
+    "\n",
+    "And here is an inline equation: $a^2 + b^2 = c^2$\n",
+    "\"\"\"\n",
+    "\n",
+    "converted_content = convert_equation_brackets_back(markdown_content)\n",
+    "print(converted_content)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Remember that I have $5.00 and you gave me $10.00.\n",
+      "\n",
+      "And here is an inline equation: \\\\(a^2 + b^2 = c^2\\\\)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def convert_equations_while_ignoring_dollar_amounts(content):\n",
+    "    # This pattern aims to match dollar signs that likely denote math by checking for the presence of letters\n",
+    "    # It assumes math expressions will have at least one alphabetic character\n",
+    "    pattern = r'\\$(?=[^\\d]*[a-zA-Z])[^\\$]+?\\$'\n",
+    "\n",
+    "    # Replace the matched patterns\n",
+    "    content = re.sub(pattern, lambda m: r'\\\\(' + m.group(0)[1:-1].strip() + r'\\\\)', content)\n",
+    "    \n",
+    "    return content\n",
+    "\n",
+    "# Example usage:\n",
+    "markdown_content = \"\"\"\n",
+    "Remember that I have $5.00 and you gave me $10.00.\n",
+    "\n",
+    "And here is an inline equation: $a^2 + b^2 = c^2$\n",
+    "\"\"\"\n",
+    "\n",
+    "converted_content = convert_equations_while_ignoring_dollar_amounts(markdown_content)\n",
+    "print(converted_content)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -100,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
