--- a/convert.ipynb
+++ b/convert.ipynb
@@ -9,18 +9,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copied and converted: AHK Token.md to TXT\\AHK Token.txt\n",
-      "Copied and converted: CADET Reference Manual.md to TXT\\CADET Reference Manual.txt\n",
-      "Copied and converted: Example.md to TXT\\Example.txt\n",
-      "Copied and converted: Investment.md to TXT\\Investment.txt\n",
-      "Copied and converted: Legal Framework.md to TXT\\Legal Framework.txt\n",
-      "Copied and converted: Marketing and Sales.md to TXT\\Marketing and Sales.txt\n",
-      "Copied and converted: modified_README.md.bak to TXT\\Marketing and Sales.txt\n",
-      "Copied and converted: README.md to TXT\\README.txt\n",
-      "Copied and converted: STASH Reference Manual.md to TXT\\STASH Reference Manual.txt\n",
-      "Copied and converted: Strategy.md to TXT\\Strategy.txt\n",
-      "Copied and converted: VAO Reference Manual.md to TXT\\VAO Reference Manual.txt\n",
-      "Copied and converted: VAO User Manual.md to TXT\\VAO User Manual.txt\n"
+      "Copied and converted: Investment.md to TXT/Investment.txt\n",
+      "Copied and converted: README.md to TXT/README.txt\n",
+      "Copied and converted: modified_README.md.bak to TXT/README.txt\n",
+      "Copied and converted: AHK Token.md to TXT/AHK Token.txt\n",
+      "Copied and converted: CADET Reference Manual.md to TXT/CADET Reference Manual.txt\n",
+      "Copied and converted: Example.md to TXT/Example.txt\n",
+      "Copied and converted: Legal Framework.md to TXT/Legal Framework.txt\n",
+      "Copied and converted: Marketing and Sales.md to TXT/Marketing and Sales.txt\n",
+      "Copied and converted: STASH Reference Manual.md to TXT/STASH Reference Manual.txt\n",
+      "Copied and converted: Strategy.md to TXT/Strategy.txt\n",
+      "Copied and converted: VAO Reference Manual.md to TXT/VAO Reference Manual.txt\n",
+      "Copied and converted: VAO User Manual.md to TXT/VAO User Manual.txt\n"
      ]
     }
    ],
@@ -227,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
